
In 0.23.3
- New input format: markdown
- pypublish now embeds figures in html output

In 0.23.2
* Add --latex_engine option to pypublish. Enables the use xetex or luatex
* Bug fixes
  - Fix formatting bugs for eval=FALSE #18
  - Fix white space error in code chunks for wrap = FALSE #24
  - Fix unicode bug with pypublish #21
  - Update pypublish template to include textcomp due to changes in Pandoc #23

In 0.23.1
* Fix for multiline indented blocks by @abukaj
* Pypublish missing \begin{document} problem fixed by @abukaj
* Fix for pandoc 1.14 - \tightlist not defined @trsaunders

In 0.23
* New Python option --shell eshell, runs python as subprocess and is not affected by Pweave imports.
* Pweave can now be used to weave Octave, Matlab and Julia code using --shell option. Have a look at the examples on Github

In 0.22.2
* Figure and cache directory are now handled relative to weaved document
* Fixed caching
* Improved error reporting and exception handling

In 0.22.1
* Fixed a bug with inline code chunks.

In 0.22
* Package global options moved to pweave.rcParams. This is a breaking change if you have used
  Pweb class to modify Pweave options. Should not affect commandline usage.
* Renamed pweave.pweave to pweave.weave, pweave.ptangle to pweave.tangle
* Python 3 compatibilty, Thanks to Grant Goodyear https://github.com/g2boojum
* Publishing of scripts from command line : pypublish script
* Conversion between input formats and markups: Pweave-convert script
    - Convert to IPython notebooks by Aaron O'Leary https://github.com/aaren
* Possibility to run shell code from Pweave. See `engine` chunk option.
* New input formats:
	- Script
	- IPython notebook
* Bugfix: setting figure format from command line fixed.
* Ipython terminal
* Source option for chunks
	- Read from module
	- Read from file
* Multichunk blocks: complete option
* rst format uses `.. codeblock::` python directive for code chunks.
* Output formats:
    - Leanpub markdown
* New options for figures