@@ -30,7 +30,7 @@ def weave(file, doctype='rst', informat="noweb", shell="python", shell_path=None
     :param file: ``string`` input file
     :param doctype: ``string`` output document format: call with listformats true to get list of supported formats.
     :param informat: ``string`` input format: "noweb", "markdown", "notebook" or "script"
-    :param shell: ``string`` shell used to run code: "python", "ipython", "matlab" or "octave" 
+    :param shell: ``string`` shell used to run code: "python", "ipython", "matlab" or "octave"
     :param shell_path: ``string`` Set the path of shell to run code, only affects "epython" shell
     :param plot: ``bool`` use matplotlib
     :param docmode: ``bool`` use documentation mode, chunk code and results will be loaded from cache and inline code will be hidden
@@ -108,7 +108,6 @@ def publish(file, doc_format="html", latex_engine = "pdflatex"):
 
     if doc_format == "html":
         pformat = "md2html"
-        rcParams["chunk"]["defaultoptions"].update({"wrap": False})
     elif doc_format == "pdf":
         pformat = "pandoc2latex"
     else:
@@ -121,6 +120,7 @@ def publish(file, doc_format="html", latex_engine = "pdflatex"):
     doc.parse()
     doc.run()
     doc.format()
+
     doc.write(action="Published")
     if doc_format == "pdf":
         try:
